Fixed recipe gap

--- a/src/components/Favorites/Favorites.css
+++ b/src/components/Favorites/Favorites.css
@@ -120,7 +120,7 @@
 
 .favorites-recipe-list {
   list-style-type: none;
-  padding-left: 80px;
+  padding-left: 100px;
   margin-top: 5px;
 }
 
